--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </ul>
     </header>
     <section>
-        <img src="/stars.png" id="stars">
-        <img src="/moon.png" id="moon">
+        <img src="stars.png" id="stars">
+        <img src="moon.png" id="moon">
         <img src="/mountains_behind.png" id="mountains_behind">
         <h2 id="text">Moon light</h2>
         <a href="#sec" id="btn">Explore</a>
